# Timetable

./: .gitignore  README.md  funcaoAptidao.ipynb  individuo.ipynb  pyproject.toml  requirements.txt
materiais/: ag.md  links.txt
src/algoritmo_genetico/: classes.py  individuo.ipynb  uml.drawio
src/modelo_ag_tcc/: individuo.ipynb
src/tests/: test_ag_classes.py  test_classes.py
