[project]
name = "modelo-ag-tcc"
version = "0.1.0"
description = ""
authors = [
    {name = "LucasAll-dev",email = "jl012593@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "modelo_ag_tcc", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
